--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,5 +1,23 @@
+.Profile {
+  display: grid;
+  grid-template-columns: 300px 20px auto;
+}
+
+.Profile-name-container {
+  grid-column-start: 3;
+  grid-column-end: 4;
+}
+
 .Profile-name {
   font-weight: 600;
   font-size: 2rem;
   letter-spacing: 3px;
+  background-color: #EB6864;
+  color: #fff;
+  border-radius: 0.3rem;
+  width: fit-content;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
