--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -22,6 +22,14 @@
   padding-right: 15px;
 }
 
+.Profile-title {
+  font-weight: 400;
+  width: fit-content;
+  padding-left: 12px;
+  padding-right: 12px;
+  color: #222;
+}
+
 .Profile-horizontal-rule {
   border: none;
   color: #bbb;
