--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -42,6 +42,12 @@
   color: #333;
 }
 
+.Profile-contact {
+  padding: 17px;
+  padding-top: 4px;
+  color: #333;
+}
+
 .Profile-github {
   display: block;
   color: #fff;
