enables smaller screen friendly UI shifting

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  padding-top: 100px;
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-top: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
 }
