--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,8 +1,63 @@
 .Project {
-  padding: 5%;
   width: 100%;
   height: 600px;
   border-color: #bbb;
   border-width: 1px;
   border-style: solid;
+  display: grid;
+  grid-template-columns: 3% auto 3%;
+  grid-template-rows: 5% auto 5%;
+}
+
+.Project-background {
+  height: 600px;
+  filter: blur(3px);
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 4;
+  overflow: hidden;
+}
+
+.Project-body {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
+  z-index: 1;
+}
+
+.Project-name {
+  font-weight: 600;
+  font-size: 2rem;
+  letter-spacing: 3px;
+  background-color: rgb(241, 74, 68);
+  color: #fff;
+  border-radius: 0.3rem;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  width: fit-content;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-bottom: -1px;
+}
+
+.Project-text {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: rgb(241, 74, 68);
+  color: #fff;
+  border-radius: 0.3rem;
+  border-top-left-radius: 0px;
+  width: fit-content;
+  margin-top: 0px;
+}
+
+.Project-bullet {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
