--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -58,6 +58,11 @@
   margin-top: 0px;
 }
 
+.Project-description {
+  display: inline-block;
+  margin-top: 4px;
+}
+
 .Project-bullet {
   margin-top: 10px;
   margin-bottom: 10px;
