links shade on click and hover

--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -94,6 +94,14 @@
   width: fit-content;
 }
 
+.Profile-github:hover {
+  opacity: 0.95;
+}
+
+.Profile-github:active {
+  opacity: 1;
+}
+
 .Profile-github-text {
   text-align: center;
   position: relative;
