--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -39,21 +39,28 @@
 }
 
 .Project-name {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
   font-weight: 600;
   font-size: 2rem;
   letter-spacing: 3px;
   background-color: rgb(241, 74, 68);
   color: #fff;
-  border-radius: 0.3rem;
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
   width: fit-content;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 15px;
   padding-right: 15px;
-  margin-bottom: -1px;
+  margin-bottom: -2px;
   margin-top: 0px;
+}
+
+.Project-horizontal-rule {
+  border: none;
+  background-color: rgb(235, 228, 228);
+  height: 1px;
+  width: 80%;
 }
 
 .Project-text {
@@ -64,7 +71,6 @@
   background-color: rgb(241, 74, 68);
   color: #fff;
   border-radius: 0.3rem;
-  border-top-left-radius: 0px;
   width: fit-content;
   margin-top: 0px;
 }
